# Projeto_Eng_de_dados

./: .gitignore  README.md  delta_lakehouse.ipynb  iceberg_lakehouse.ipynb  mkdocs.yml  pyproject.toml
apache-spark/: README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
apache-spark/notebooks/: iceberg.ipynb
delta/: index.html
docs/: delta.md  iceberg.md  index.md  spark.md
notebooks/: delta_lake.ipynb
site/: index.html
site/iceberg/: index.html
site/search/: search_index.json
site/spark/: index.html
spark-warehouse/corridas/: .part-00000-17ec3e32-77d8-4406-9f78-2227adc9b9f1-c000.snappy.parquet.crc  .part-00000-3fe5c0d7-fd84-4d1e-9a19-97fd861cb8c0-c000.snappy.parquet.crc  .part-00000-c7dc8951-56bb-48b1-bc6b-85ea71aa442c-c000.snappy.parquet.crc  .part-00001-a0149101-54ef-45a9-b726-a1c94e401f18-c000.snappy.parquet.crc  part-00000-9c2a70cd-05d5-4126-b41c-5d9927a7ee55-c000.snappy.parquet  part-00000-9dd2d6b9-31c3-4215-8990-2a348652bd99-c000.snappy.parquet  part-00000-c7dc8951-56bb-48b1-bc6b-85ea71aa442c-c000.snappy.parquet  part-00002-3aee2ccc-8039-40a7-8969-7df88120914f-c000.snappy.parquet
spark-warehouse/motoristas/: .part-00000-b52e7210-c0bf-47f7-a4ac-8aaf463903e8-c000.snappy.parquet.crc  .part-00000-cbcca875-dea2-4e4b-9f70-ea26d9782b4f-c000.snappy.parquet.crc  .part-00000-e58763fe-8fb3-413e-ad57-f68d8e1ba5ac-c000.snappy.parquet.crc  .part-00001-0f1b8cd2-3f3b-4af7-bf47-bed7defac7d5-c000.snappy.parquet.crc  .part-00001-9f38fbda-8f7d-43ce-bea7-6778daa8648b-c000.snappy.parquet.crc  (+5 more)
(+80 files in other folders)
