[project]
name = "apache-spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "delta-spark==3.2.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pyiceberg>=0.11.1",
    "pyspark==3.5.1",
]
